# ffmpeg-test

./: .gitignore  CMakeLists.txt  decoder.cpp  decoder.h  encoder.cpp  encoder.h  inspector.cpp  inspector.h  main.cpp  main2.cpp  main_scale.cpp  main_server.cpp  notes.txt  server.cpp
ffmpeg/: CMakeLists.txt
ffmpeg/include/libavutil/: ffversion.h
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
imgui/: CMakeLists.txt
